--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "hardhat-project",
-  "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.4"
+  "name": "BankApp",
+  "version": "1.0.0",
+  "description": "Your project description",
+  "scripts": {
+    "start": "react-scripts start",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@metamask/providers": "^10.2.1",
-    "next": "^13.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@truffle/hdwallet-provider": "^2.1.13",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.5.3",
+    "react-scripts": "4.0.0",
+    "truffle": "^5.4.0"
   },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  }
+  "author": "Your Name",
+  "license": "MIT"
 }
